--- a/app/views/freelancers/_header.html.erb
+++ b/app/views/freelancers/_header.html.erb
@@ -4,12 +4,11 @@
             <div class="col-lg-12">
                 <%= image_tag "freelancer/profile.png", class: "img-responsive", alt: "" %>
                 <div class="intro-text">
-                    <span class="name">Start Bootstrap</span>
+                    <span class="name">Joe Ferrairo</span>
                     <hr class="star-light">
-                    <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                    <span class="skills">Full Stack Ruby on Rails Web Developer</span>
                 </div>
             </div>
         </div>
     </div>
 </header>
-
