--- a/app/views/freelancers/_header.html.erb
+++ b/app/views/freelancers/_header.html.erb
@@ -1,14 +1,18 @@
 <header>
-    <div class="container">
+    <div class="container center">
         <div class="row">
             <div class="col-lg-12">
-                <%= image_tag "freelancer/profile.png", class: "img-responsive", alt: "" %>
+
+                <%= image_tag "freelancer/JF.jpg", class: "img-circle img-responsive", alt: "" %>
+
                 <div class="intro-text">
                     <span class="name">Joe Ferrairo</span>
                     <hr class="star-light">
                     <span class="skills">Full Stack Ruby on Rails Web Developer</span>
+
                 </div>
             </div>
         </div>
     </div>
+
 </header>
