--- a/app/views/freelancers/_header.html.erb
+++ b/app/views/freelancers/_header.html.erb
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <%= image_tag "freelancer/JF.jpg", class: "img-circle img-responsive", alt: "" %>
+                <%= image_tag "freelancer/jf.jpg", class: "img-circle img-responsive", alt: "" %>
 
                 <div class="intro-text">
                     <span class="name">Joe Ferrairo</span>
