--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -10,7 +10,7 @@
           <h3>Web Links</h3>
           <ul class="list-inline">
             <li>
-              <a href="instagram.com/jferrair0" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+              <a href="http://instagram.com/jferrair0" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
             </li>
 
             <li>
@@ -29,7 +29,7 @@
         </div>
         <div class="footer-col col-md-4">
           <h3>About Me</h3>
-          <p>I am a Full Stack Ruby on Rails Web developer working out of Boston, MA. I am currently looking for some freelance development projects. If you have any questions or inquiries please feel free to contact me.</p>
+          <p>I am a Full Stack Ruby on Rails Web developer working out of Boston, MA. I am currently looking for some freelance development projects. If you have any questions or would like to work with me please feel free to contact me.</p>
         </div>
       </div>
     </div>
