--- a/app/views/freelancers/_navigation.html.erb
+++ b/app/views/freelancers/_navigation.html.erb
@@ -17,7 +17,7 @@
 
 
                 <li class="page-scroll">
-                    <a href="#contact">Contact</a>
+                    <a href="mailto:josephferrairo@gmail.com?subject=Hi Joe!">Contact Me</a>
                 </li>
             </ul>
         </div>
