added link to contact me in footer

--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -29,7 +29,7 @@
         </div>
         <div class="footer-col col-md-4">
           <h3>About Me</h3>
-          <p>I am a Full Stack Ruby on Rails Web developer working out of Boston, MA. I am currently looking for some freelance development projects. If you have any questions or would like to work with me please feel free to contact me.</p>
+          <p>I am a Full Stack Ruby on Rails Web developer working out of Boston, MA. I am currently looking for some freelance development projects. If you have any questions or would like to work with me please feel free to <a href="mailto:josephferrairo@gmail.com?subject=Hi Joe!"style="color: #a259e2"><u>contact me.</u></a></p>
         </div>
       </div>
     </div>
